# prettysql

./: CMakeLists.txt  README.md  build.sh  make_deps.sh
doc/: example.html
misc/: schema_example.csv
src/: CMakeLists.txt  _sqltree_printer.hpp  _sqltree_schema_lookup.hpp  csvtoker.h  json_render.cpp  main.cpp  sqlexpr_util.h  utils.cpp
tests/: CMakeLists.txt  test_schema.cpp  test_to_s.cpp
