CMAKE_MINIMUM_REQUIRED(VERSION 2.7)

set (PROJECT_NAME prettysql)
PROJECT(${PROJECT_NAME})

file(GLOB HDRS "*.h*" )
file(GLOB SRCS "*.cpp")

if($ENV{PRETTYSQL_JSON})
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DPRETTYSQL_JSON=1")
  FIND_LIBRARY(RAPIDJSON_LIB rapidjson )
endif()


FIND_LIBRARY(SIMPLESQL_LIB simplesql )
FIND_LIBRARY(ANTLR_LIB antlr4-runtime )

add_executable (${PROJECT_NAME} ${SRCS} ${HDRS})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${SIMPLESQL_LIB} ${ANTLR_LIB})
